# redtrace

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md
docs/: architecture.md  export-format.md  sample-engagement.md  terminal-demo.md
examples/: demo.sh  engagement.sample.yaml  finding.sample.yaml  report.sample.md
examples/demo-engagement/: README.md
src/: cli.rs  doctor.rs  error.rs  lib.rs  main.rs  validation.rs  workspace.rs
src/assets/: commands.rs  model.rs
src/engagement/: commands.rs  mod.rs  model.rs  storage.rs
src/evidence/: commands.rs  hashing.rs  mod.rs  model.rs  vault.rs
src/export/: commands.rs  manifest.rs  mod.rs  package.rs
src/findings/: commands.rs  mod.rs  model.rs  severity.rs
src/mappings/: attack.rs  csf.rs  mod.rs  owasp.rs
src/report/: html.rs  markdown.rs  mod.rs  templates.rs
src/sample/: commands.rs
src/scope/: cidr.rs  commands.rs  domain.rs  guard.rs  mod.rs  model.rs
src/timeline/: commands.rs  model.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/views/: mod.rs  report.rs
templates/: report.html.tera  report.md.tera
tests/: doctor.rs  evidence_hashing.rs  finding_lifecycle.rs  init_project.rs  report_generation.rs  scope_guard.rs  validation.rs
