[package]
name = "redtrace"
version = "0.1.0"
edition = "2021"
authors = ["waiskinny1-max"]
description = "Terminal-first red-team engagement tracker for scope, evidence, findings, timelines, mappings, and report generation."
license = "MIT"
repository = "https://github.com/waiskinny1-max/redtrace"
keywords = ["red-team", "pentest", "evidence", "reporting", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ipnet = "2"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
tera = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
